@startuml
title Multithreaded Data Acquisition Pipeline - Read Side

skinparam classAttributeIconSize 0
skinparam shadowing false

class ioPipelineController {
  - cfg: ioPipelineConfig
  - reader: ioUsbReadController
  - writer: ioUsbWriteController
  - buffer: ioDataBuffer
  - input_stream: ioReadableByteStream
  - output_stream: ioWritableByteStream
  - recovery_manager: ioRecoveryManager
  - acquisition_monitor: ioAcquisitionMonitor
  - throughput_monitor: ioThroughputMonitor
  - input_scheduler: ioInputScheduler
  - output_scheduler: ioOutputScheduler
  + start(): void
  + stop(): void
  + join(): void
  + status_snapshot(): dict
}

class ioPipelineConfig {
  + input_mode: str
  + input_device_index: int
  + input_path: str
  + output_mode: str
  + output_path: str
  + output_device_index: int
  + append_output: bool
  + bytes_per_read: int
  + bytes_per_write: int
  + input_hz: float
  + output_hz: float
  + buffer_capacity: int
  + dll_path: str
}

class ioUsbReadController <<read worker>> {
  - stream: ioReadableByteStream
  - buffer: ioDataBuffer
  - cfg: ioAcquisitionConfig
  - acquisition_monitor: ioAcquisitionMonitor
  - recovery_manager: ioRecoveryManager
  - scheduler: ioInputScheduler
  - running: bool
  + start(): void
  + read_loop(): void
  + stop(): void
  + join(): void
}

abstract class ioThreadedWorkerBase <<abstract>> {
  - running: bool
  - thread: Thread
  - lock: Lock
  + start(): void
  + stop(): void
  + join(): void
  + is_running(): bool
}

class ioDataBuffer <<circular buffer>> {
  - capacity: int
  - _head: int
  - _tail: int
  - _count: int
  - _storage: byte[]
  - _lock: Lock
  - _not_empty: Condition
  - _not_full: Condition
  - _closed: bool
  + push(data: bytes): void
  + pop(max_bytes: int, timeout=None): bytes
  + close(): void
  + is_closed(): bool
  + is_full(): bool
  + is_empty(): bool
  + size(): int
}

class ioAcquisitionConfig {
  + input_hz: float
  + bytes_per_read: int
}

class ioAcquisitionMonitor {
  + total_read: int
  + record_read(nbytes: int): void
  + throughput_kbps(): float
}

abstract class ioByteCountMonitorBase <<abstract>> {
  - _total_count: int
  - start_time: float
  - lock: Lock
  + throughput_kbps(): float
}

class ioRecoveryManager {
  + messages: list[str]
  + safe_stopped: bool
  + notify_user(msg: str): void
  + transition_to_safe_stop(): void
}

class ioInputScheduler {
  + sleep_until_next_input(input_hz: float): void
}

abstract class ioRateSchedulerBase <<abstract>> {
  - next_time: float
}

interface ioStreamLifecycle <<lifecycle protocol>> {
  + open(): void
  + close(): void
  + is_connected(): bool
}

interface ioReadableByteStream <<input source protocol>> {
  + open(): void
  + read_bytes(count: int): bytes
  + close(): void
  + is_connected(): bool
  + is_exhausted(): bool
}

abstract class ioAbstractReadableByteStream <<abstract>> {
  + read_bytes(count: int): bytes
}

abstract class ioAbstractFileBackedByteStream <<abstract>> {
  - _path: str
  - file_handle: BinaryIO
  - connected: bool
  + open(): void
  + close(): void
  + is_connected(): bool
}

abstract class ioAbstractSessionBackedByteStream <<abstract>> {
  - device_index: int
  - dll_path: str
  - session_factory: Callable
  - session: object
  - connected: bool
  + open(): void
  + close(): void
  + is_connected(): bool
}

class ioFileInputByteStream <<file input source>> {
  - input_path: str
  - exhausted: bool
  + open(): void
  + read_bytes(count: int): bytes
  + is_exhausted(): bool
  + close(): void
}

class ioFtdiByteStream <<FTDI input source>> {
  + open(): void
  + read_bytes(count: int): bytes
  + is_exhausted(): bool
  + close(): void
}

class ioFtdiSession <<existing>> {
  + open(): void
  + read_bytes(count: int): bytes
  + write_bytes(data: bytes): int
  + close(): void
}

ioPipelineController "1" *-- "1" ioUsbReadController
ioPipelineController "1" *-- "1" ioDataBuffer
ioPipelineController "1" *-- "1" ioRecoveryManager
ioPipelineController "1" *-- "1" ioAcquisitionMonitor
ioPipelineController "1" *-- "1" ioInputScheduler
ioPipelineController "1" *-- "1" ioPipelineConfig
ioPipelineController "1" o-- "1" ioReadableByteStream : selected source strategy

ioUsbReadController --> ioDataBuffer : push()
ioUsbReadController --> ioReadableByteStream : read_bytes()
ioUsbReadController --> ioAcquisitionConfig
ioUsbReadController --> ioAcquisitionMonitor
ioUsbReadController --> ioRecoveryManager
ioUsbReadController --> ioInputScheduler

ioThreadedWorkerBase <|-- ioUsbReadController
ioByteCountMonitorBase <|-- ioAcquisitionMonitor
ioRateSchedulerBase <|-- ioInputScheduler
ioStreamLifecycle <|-- ioReadableByteStream
ioReadableByteStream <|.. ioAbstractReadableByteStream
ioStreamLifecycle <|.. ioAbstractFileBackedByteStream
ioStreamLifecycle <|.. ioAbstractSessionBackedByteStream
ioAbstractReadableByteStream <|-- ioFileInputByteStream
ioAbstractReadableByteStream <|-- ioFtdiByteStream
ioAbstractFileBackedByteStream <|-- ioFileInputByteStream
ioAbstractSessionBackedByteStream <|-- ioFtdiByteStream
ioReadableByteStream <|.. ioFileInputByteStream
ioReadableByteStream <|.. ioFtdiByteStream

ioFtdiByteStream *-- ioFtdiSession

note right of ioDataBuffer
Bounded producer-consumer buffer.
Supports blocking push and pop,
full and empty synchronization,
and close-driven draining.
end note

note top of ioPipelineController
Implemented in ioLibrary.pipeline and used
by controller.py pipeline mode.
Input and output strategies are both
selected at runtime from config.
end note

note bottom of ioUsbReadController
Assignment role alias: ReadWorker.
The producer now accepts either
FTDI input or file input through
ioReadableByteStream.
end note

note bottom of ioReadableByteStream
Input source protocol.
It extends ioStreamLifecycle and is
realized by the concrete source types.
end note

note bottom of ioAbstractSessionBackedByteStream
Shared FTDI input lifecycle.
The concrete input stream adds
the read-specific byte operation.
end note
@enduml
